--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-* linguist-vendored
+toolbox/* linguist-vendored
 *.js linguist-vendored=false
-*.rb linguist-language=MATLAB
+*.m linguist-detectable=true
